<resources>
    <string name="app_name">Taste Insight</string>
    <string name="main_page_title">Welcome</string>
    <string name="main_page_profile">Profile</string>
    <string name="home_nav">Home</string>
    <string name="collections_nav">Collections</string>
    <string name="review_nav">My Reviews</string>
    <string name="restaurants_nav">Restaurants</string>
    <string name="restaurant_name">Dummy restaurant</string>
    <string name="review_dummy">5 Dummy Reviews</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="collections_title">Collections</string>
    <string name="create_collection">Create</string>
    <string name="public_collections">Public Collections</string>
    <string name="dummy_restaurant_name">From Wikipedia</string>
    <string name="my_collections">My collections</string>
    <string name="view_all">View All</string>
    <string name="Reviews">Reviews</string>
    <string name="reviews_segmented">Reviews</string>
    <string name="drafts">Drafts</string>
    <string name="photos">Photos</string>
    <string name="description_review">Review</string>
    <string name="google_login_string">Sign up or Login to Google</string>
    <string name="email_login_string">Login with Email</string>
    <string name="email_signup_string">Sign up with Email</string>
    <string name="guest_login_string">login as Guest</string>
    <string name="sign_in_text">Sign up or sign in for Taste Insight</string>
    <string name="description_sign_in_text">Create or view profiles, view popular restaurants, and more.</string>
    <string name="web_client_ID">416141540251-7un7qfb33csmib9vs02bjnjargmb9fnn.apps.googleusercontent.com</string>
    <string name="successful_login">Successful Login</string>
    <string name="failed_login">Failed Login</string>
    <string name="login_cancelled">Cancelled Login</string>
    <string name="email_login">Enter Email</string>
    <string name="account_name_helper">Account Name</string>
    <string name="password_login">Enter Password</string>
    <string name="tempString">Temp String Name</string>
    <string name="review_count">0</string>
    <string name="review_label">Reviews</string>
    <string name="collection_count">0</string>
    <string name="collections_label">Collections</string>
    <string name="photos_count">0</string>
    <string name="photos_label">Photos</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="edit_account_button">Edit</string>
    <string name="default_location">Location</string>
    <string name="default_title">Title</string>
    <string name="default_rating">Rating: 4/5</string>
    <string name="default_author">Author Name </string>
    <string name="new_author">Author</string>
    <string name="review_title_hint">Title</string>
    <string name="review_location_hint">Location</string>
    <string name="review_rating_hint">Rating</string>
    <string name="review_description_hint">Description</string>
    <string name="review_restaurant_hint">Restaurant</string>
    <string name="insert_image_button">Insert Image</string>
    <string name="featured_collections"> Your Collection</string>
    <string name="review_selector"> Select Your Collection of Reviews</string>
    <string name="rating">Rating: %1$s</string>
    <string name="author">Author: %1$s</string>
    <string name="default_description">Description: Write your review here. Write about the food, location and experiences you had</string>

</resources>