<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AppTheme"
    tools:context=".UserAccount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/name_image_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/account_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tempString"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textAlignment="center"
                android:paddingVertical="20dp"
                app:layout_constraintTop_toTopOf="parent">
            </com.google.android.material.textview.MaterialTextView>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image_icon"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="5dp"
                app:layout_constraintTop_toBottomOf="@id/account_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:src="@drawable/default_account_icon">
            </de.hdodenhof.circleimageview.CircleImageView>

            <GridLayout
                android:id="@+id/account_values_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/profile_image_icon"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:rowCount="1"
                android:columnCount="2">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/reviews_count_card"
                    android:layout_width="0dp"
                    app:cardCornerRadius="15dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/reviews_count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/review_count"
                            android:textAlignment="center">
                        </com.google.android.material.textview.MaterialTextView>

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/reviews_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/review_label"
                            android:textAlignment="center">
                        </com.google.android.material.textview.MaterialTextView>

                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/collections_count_card"
                    android:layout_width="0dp"

                    app:cardCornerRadius="15dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/collections_count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/collection_count"
                            android:textAlignment="center">
                        </com.google.android.material.textview.MaterialTextView>

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/collections_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/collections_label"
                            android:textAlignment="center">
                        </com.google.android.material.textview.MaterialTextView>

                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>



            </GridLayout>

<!--         ADD MOST RECENT REVIEW SHIT HERE   -->

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:rowCount="1"
                android:columnCount="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/account_values_layout">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sign_out_button"
                    android:layout_margin="5dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:text="@string/sign_out_button">
                </com.google.android.material.button.MaterialButton>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/edit_button"
                    android:layout_margin="5dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:text="@string/edit_account_button">
                </com.google.android.material.button.MaterialButton>

            </GridLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


</FrameLayout>