<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <GridLayout
        android:id="@+id/collections_review_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        android:padding="10dp"
        android:rowCount="1"
        android:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent">


        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/collections_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="0"
            />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_rowWeight="1"
            android:layout_columnWeight="2"
            android:orientation="vertical">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/collections_image_card"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="5dp"
                android:layout_centerInParent="true">
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/collections_review_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/collections_location_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/collections_image_card"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:padding="5dp"
                android:text="@string/default_location"
                android:textAlignment="center" />
        </RelativeLayout>
        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_rowWeight="1"
            android:layout_columnWeight="2"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/collections_title_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_title"
                android:textAlignment="center"
                android:layout_marginVertical="2dp"
                android:layout_marginHorizontal="3dp"
                android:textSize="25sp"
                android:textAllCaps="true">
            </com.google.android.material.textview.MaterialTextView>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/collections_rating_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp"
                android:layout_marginHorizontal="3dp"
                android:text="@string/default_rating"

                android:textSize="15sp">
            </com.google.android.material.textview.MaterialTextView>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/collections_description_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="2dp"
                android:layout_marginHorizontal="3dp"
                android:text="@string/default_description"

                android:textSize="15sp">
            </com.google.android.material.textview.MaterialTextView>

        </LinearLayout>

    </GridLayout>



</RelativeLayout>